# guify

./: .gitignore  README.md  pyproject.toml
guify/: Guify.py  Parser.py  __main__.py
guify/commands/: curl_api.json  echo.json
